# open-audio-judge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: asr-eval-taxonomy.md  asr-leaderboard-artifacts.json  asr-leaderboard-bundle-status.json  asr-leaderboard-cron-handoff.md  asr-leaderboard-cron-status.json  asr-leaderboard-demo.html  asr-leaderboard-hosted-manifest.json  asr-leaderboard-live-refresh.sh  asr-leaderboard-manifest-validation.json  asr-leaderboard-next-action.md  asr-leaderboard-next-runs.json  asr-leaderboard-refresh-commands.sh  asr-leaderboard-refresh-decision.json  asr-leaderboard-refresh-report.md  asr-leaderboard-refresh-workflow.json  asr-leaderboard-report-bundle.json  asr-leaderboard-report-index.md  asr-leaderboard-report-links.json  asr-leaderboard-run-manifest.json  asr-leaderboard-runtime-status.json  asr-leaderboard-source-selection.json  asr-leaderboard-summary.json  asr-seed-manifest-validation.json  chatterbox-gemini-sample.html  index.html  plan.md  provider-gemini.md  provider-qwen.md  research.md  sample-audio.md  status-2026-06-29.md  tts-eval-taxonomy.md  tts-leaderboard-demo.html
examples/: asr_cases.jsonl  asr_open_samples.jsonl  asr_research_cases.jsonl  gemini_sample_records.jsonl  tts_cases.jsonl  tts_multiturn_cases.jsonl  tts_open_samples.jsonl
prompts/: asr_error_judge.yaml  tts_naturalness.yaml
scripts/: check_asr_leaderboard_page.py  check_asr_report_bundle.py  gemini_sample_records.py  materialize_open_samples.py  refresh_asr_leaderboard_artifacts.py  synthesize_tts_cases.py  transcribe_asr_cases.py  (+3 more)
(+39 files in other folders)
