[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "open-audio-judge"
version = "0.1.0"
description = "Prompt-based audio LLM judges for ASR, TTS, VAD, diarization, speech translation, and audio event evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Open Audio Judge contributors" }
]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn[standard]>=0.30,<0.49"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[project.scripts]
oaj = "open_audio_judge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/open_audio_judge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
